tests/ui/borrowck/disallow-possibly-uninitialized.stderr
error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:6:5
   |
LL |     let mut t: (u64, u64);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:11:5
   |
LL |     let mut t: (u64, u64);
   |         ----- binding declared here but left uninitialized
LL |     t.1 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:16:5
   |
LL |     let mut t: (u64, u64);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/disallow-possibly-uninitialized.rs:20:5
   |
LL |     let mut t: (u64,);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 1;
   |     ^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0381`.
